[package]
name = "dastral"
version = "0.1.0"
edition = "2021"
description = """
Reduce boilerplate code, learn data structures & algorithms
with Dastral.
"""
license = "MIT"
readme = "README.md"
keywords = ["data-structures", "algorithms", "rust-patterns"]
categories = ["data-structures", "algorithms", "rust-patterns"]

[dependencies]
