[package]
name = "dastral"
version = "0.1.1"
edition = "2021"
description = """
Reduce boilerplate code, learn data structures & algorithms
with Dastral.
"""
documentation = "https://docs.rs/dastral"
readme = "README.md"
repository = "https://github.com/MartinGHaas/dastral"
license = "MIT"
keywords = ["data-structures", "algorithms", "rust-patterns"]
categories = ["data-structures", "algorithms", "rust-patterns"]

[dependencies]
